[package]
name = "xpbd_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_gltf_blueprints = "0.10.2"
bevy_registry_export = "0.3"
bevy_xpbd_3d = { version = "0.4.2", features = ["simd"]}
bevy_editor_pls = "0.8.1"
bevy_asset_loader = { version = "0.20.2", features = ["3d"] }

[dependencies.bevy]
version = "0.13.2"
features = ["dynamic_linking", "jpeg", "file_watcher"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
